adding contact page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
 
         <meta charset="UTF-8">
-        <title>My Portfolio Page</title>
+        <title>Home-About Me</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" 
         crossorigin="anonymous">
@@ -33,13 +33,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
+                  <a class="nav-link" href="index.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Portfolio</a>
+                  <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
+                  <a class="nav-link" href="contact.html">Contact</a>
                 </li>
               </ul>
             </div>
@@ -63,7 +63,7 @@
             class="center"
             img/>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Accumsan tortor posuere ac ut. A erat nam at lectus urna. Duis ultricies lacus sed turpis tincidunt id aliquet risus. Faucibus purus in massa tempor nec feugiat nisl. Mattis pellentesque id nibh tortor. Donec enim diam vulputate ut pharetra. Nulla posuere sollicitudin aliquam ultrices sagittis orci a scelerisque purus. Odio facilisis mauris sit amet. Mattis pellentesque id nibh tortor id aliquet. Etiam erat velit scelerisque in dictum. Magna fermentum iaculis eu non diam phasellus vestibulum lorem. Cursus mattis molestie a iaculis at erat pellentesque adipiscing. Sagittis orci a scelerisque purus semper. Vitae semper quis lectus nulla at volutpat diam ut. Senectus et netus et malesuada. Lacus laoreet non curabitur gravida arcu ac tortor. Ut pharetra sit amet aliquam id. Sed risus ultricies tristique nulla aliquet enim tortor at. Velit aliquet sagittis id consectetur purus ut.
+        <p style="margin-left: 40px">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Accumsan tortor posuere ac ut. A erat nam at lectus urna. Duis ultricies lacus sed turpis tincidunt id aliquet risus. Faucibus purus in massa tempor nec feugiat nisl. Mattis pellentesque id nibh tortor. Donec enim diam vulputate ut pharetra. Nulla posuere sollicitudin aliquam ultrices sagittis orci a scelerisque purus. Odio facilisis mauris sit amet. Mattis pellentesque id nibh tortor id aliquet. Etiam erat velit scelerisque in dictum. Magna fermentum iaculis eu non diam phasellus vestibulum lorem. Cursus mattis molestie a iaculis at erat pellentesque adipiscing. Sagittis orci a scelerisque purus semper. Vitae semper quis lectus nulla at volutpat diam ut. Senectus et netus et malesuada. Lacus laoreet non curabitur gravida arcu ac tortor. Ut pharetra sit amet aliquam id. Sed risus ultricies tristique nulla aliquet enim tortor at. Velit aliquet sagittis id consectetur purus ut.
 
           Morbi tempus iaculis urna id volutpat lacus laoreet. Amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar sapien. Metus dictum at tempor commodo ullamcorper a lacus vestibulum. Ornare arcu odio ut sem nulla. Maecenas ultricies mi eget mauris pharetra et ultrices neque ornare. Vitae tortor condimentum lacinia quis vel eros donec ac odio. Nisl nunc mi ipsum faucibus vitae. Viverra suspendisse potenti nullam ac tortor vitae purus faucibus ornare. Magnis dis parturient montes nascetur ridiculus mus. Aliquam eleifend mi in nulla posuere sollicitudin aliquam. Pellentesque habitant morbi tristique senectus. </p>
         </div>
