adding headers and About me text

--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
     </head>
 
   <body>
+    <header>
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -48,7 +49,9 @@
         </div>
       </div>
     </div>
+    </header>
 
+  <main>
     <div class=row>
       <div class="col-5">
       </div>
@@ -81,15 +84,23 @@
       </div>
     </div>
 
-  <div class="row">
-    <div class="col-5">
+    <div class="row">
+      <div class="col-5">
 
-    </div>
+      </div>
 
-    <div class="col-2">
-      <button class="btn btn-primary" type="submit">Submit</button>
+      <div class="col-2">
+        <button class="btn btn-primary" type="submit">Submit</button>
+      </div>
     </div>
-  </div>
+  </main>
+
+  <footer class="footer">
+    <p>
+        &copy; 2019 | Cate Dunn | <a href="#">catedunn@alumni.unc.edu</a>
+    </p>
+  </footer>
+</body>
 
 
 
