--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
           <img
             src="https://media-exp1.licdn.com/dms/image/C4E03AQHSbCx8kBs4aw/profile-displayphoto-shrink_200_200/0?e=1586995200&v=beta&t=K_QGiZAziVDvjMSuHigsXgueB7wfHFIMNLU7nbLKAAk"
             alt="my photo"
-            style="width:300px;height:300px"
+            style="width:250px;height:250px"
             class="center"
             img/>
 
-        <p style="margin-left: 40px">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Accumsan tortor posuere ac ut. A erat nam at lectus urna. Duis ultricies lacus sed turpis tincidunt id aliquet risus. Faucibus purus in massa tempor nec feugiat nisl. Mattis pellentesque id nibh tortor. Donec enim diam vulputate ut pharetra. Nulla posuere sollicitudin aliquam ultrices sagittis orci a scelerisque purus. Odio facilisis mauris sit amet. Mattis pellentesque id nibh tortor id aliquet. Etiam erat velit scelerisque in dictum. Magna fermentum iaculis eu non diam phasellus vestibulum lorem. Cursus mattis molestie a iaculis at erat pellentesque adipiscing. Sagittis orci a scelerisque purus semper. Vitae semper quis lectus nulla at volutpat diam ut. Senectus et netus et malesuada. Lacus laoreet non curabitur gravida arcu ac tortor. Ut pharetra sit amet aliquam id. Sed risus ultricies tristique nulla aliquet enim tortor at. Velit aliquet sagittis id consectetur purus ut.
+        <p style="margin-left: 40px"> Welcome to my portfolio! I graduated from UNC Chapel Hill in 2016 with a Bachelor's degree in psychology. After working in the Human Resources realm for almost three years, I decided to take my career in a completely different direction to follow my aspiration of becoming a web developer. I hope to be a full stack developer after completion of UNC coding Bootcamp in August of 2020. Feel free to take a look around my portfolio and explore my projects. You can contact me using the contact page or at the email link below. Enjoy!
 
-          Morbi tempus iaculis urna id volutpat lacus laoreet. Amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar sapien. Metus dictum at tempor commodo ullamcorper a lacus vestibulum. Ornare arcu odio ut sem nulla. Maecenas ultricies mi eget mauris pharetra et ultrices neque ornare. Vitae tortor condimentum lacinia quis vel eros donec ac odio. Nisl nunc mi ipsum faucibus vitae. Viverra suspendisse potenti nullam ac tortor vitae purus faucibus ornare. Magnis dis parturient montes nascetur ridiculus mus. Aliquam eleifend mi in nulla posuere sollicitudin aliquam. Pellentesque habitant morbi tristique senectus. </p>
+       </p>
         </div>
 
         <div class="col-2">
@@ -77,7 +77,12 @@
       </div>
     </div>
 
-       
+    <footer class="footer">
+      <p>
+          &copy; 2019 | Cate Dunn | <a href="#">catedunn@alumni.unc.edu</a>
+      </p>
+  </footer>
+
        
 
 
