--- a/contact.html
+++ b/contact.html
@@ -55,6 +55,8 @@
       <div class="col-3">
         <p style="font-size:24px; font-family:'Open Sans Condensed';">Contact Me!</p>
       </div>
+      <div class="col-4">
+      </div>
     </div>
 
     <div class="row">
@@ -75,6 +77,8 @@
             <label for="exampleFormControlTextarea1">Message</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="7"></textarea>
           </div>
+          <div class="col-3">
+          </div>
         </form>
       </div>
     </div>
@@ -85,6 +89,8 @@
 
       <div class="col-2">
         <button class="btn btn-primary" type="submit">Submit</button>
+      </div>
+      <div class="col-5">
       </div>
     </div>
   </main>
@@ -97,7 +103,8 @@
             </p>
           </footer>
         </div>
-      </div>  
+   </div>
+  
 </body>
 </html>
 
