--- a/portfolio.html
+++ b/portfolio.html
@@ -67,6 +67,8 @@
             <div class="card-body">
               <a href="https://www.google.com/" class="card-text">Info Widget</a>
             </div>
+            <div class="col-2">
+            </div>
           </div>
         </div>
       </div>
@@ -78,6 +80,8 @@
       <div class="col-2">
         <div class="boxed">
           <h2>Portfolio</h2>
+        </div>
+        <div class="col-5">
         </div>
       </div>
     </div>
@@ -104,6 +108,8 @@
           <div class="card-body">
               <a href="https://www.google.com/" class="card-text">Trivia Game</a>
             </div>
+          <div class="col-2">
+          </div>
           </div>
         </div>
       </main>
