--- a/contact.html
+++ b/contact.html
@@ -27,8 +27,8 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <nav class="navbar navbar-expand-sm navbar-light bg-light">
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <nav class="navbar navbar-expand navbar-light bg-light">
+              <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
                 <ul class="navbar-nav mr-auto">
                   <li class="nav-item">
                     <a class="nav-link" href="index.html">About</a>
@@ -40,7 +40,7 @@
                     <a class="nav-link" href="contact.html">Contact</a>
                   </li>
                 </ul>
-              </div>
+              <!-- </div> -->
             </nav>
           </div>
         </div>
