--- a/contact.html
+++ b/contact.html
@@ -14,37 +14,20 @@
 
   <body>
     <header>
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            
-            <h1>Cate Dunn</h1>
-
-          </div>
-        </div>
-      </div>
-
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <nav class="navbar navbar-expand navbar-light bg-light">
-              <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
-                <ul class="navbar-nav mr-auto">
-                  <li class="nav-item">
-                    <a class="nav-link" href="index.html">About</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                  </li>
-                </ul>
-              <!-- </div> -->
-            </nav>
-          </div>
-        </div>
-      </div>
+      <h1>Cate Dunn</h1>
+       <nav class="navbar navbar-expand navbar-light bg-light">
+         <ul class="navbar-nav">
+           <li class="nav-item">
+            <a class="nav-link" href="index.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </nav>   
     </header>
 
   <main>
@@ -95,16 +78,12 @@
     </div>
   </main>
 
-  <div class = "row">
-        <div class= "col-12">
-          <footer class="footer">
-            <p>
-              &copy; 2019 | Cate Dunn | <a href="#">catedunn@alumni.unc.edu</a>
-            </p>
-          </footer>
-        </div>
-   </div>
   
+   <footer>
+     <p>
+       &copy; 2019 | Cate Dunn | <a href="#">catedunn@alumni.unc.edu</a>
+      </p>
+    </footer>
 </body>
 </html>
 
