--- a/index.html
+++ b/index.html
@@ -11,42 +11,27 @@
       <link rel="stylesheet" href="style.css">
   </head>
 
-  <body>
-    <header>
-        <div class="container"></div>
-          
-              <h1>Cate Dunn</h1>
-         
-        </div>
-
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <nav class="navbar navbar-expand-sm navbar-light bg-light">
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                  <li class="nav-item">
-                    <a class="nav-link" href="index.html">About</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                  </li>
-                </ul>
-              </div>
-            </nav>
-          </div>
-        </div>
-      </div>
-    </header>
+<body>
+  <header>
+    <h1>Cate Dunn</h1>
+      <nav class="navbar navbar-expand navbar-light bg-light">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+      </nav>   
+  </header>
 
   <main>
     <div class="row">
-      <div class="col-2">
-      </div>
-
+      <div class="col-2"></div>
       <div class="col-8">
         <div class="boxed">
           <h2>About Me</h2>
@@ -57,25 +42,18 @@
                 class="center"
                 img/>
                 <p style="margin-left: 40px"> Welcome to my portfolio! I graduated from UNC Chapel Hill in 2016 with a Bachelor's degree in psychology. After working in the Human Resources realm for almost three years, I decided to take my career in a completely different direction to follow my aspiration of becoming a web developer. I hope to be a full stack developer after completion of UNC coding Bootcamp in August of 2020. Feel free to take a look around my portfolio and explore my projects. You can contact me using the contact page or at the email link below. Enjoy!</p>
+          </div>
         </div>
-      </div>
-
       <div class="col-2">
-      </div>
     </div>
-  </main>
-
-  
-  <div class = "row">
-    <div class= "col-12">
-      <footer class="footer">
-        <p>
-            &copy; 2019 | Cate Dunn | <a href="#">catedunn@alumni.unc.edu</a>
-        </p>
-      </footer>
-    </div>
-  </div>    
-  
   </div>
+  </main>
+  
+  <footer>
+   <p>
+      &copy; 2019 | Cate Dunn | <a href="#">catedunn@alumni.unc.edu</a>
+    </p>
+  </footer>
+
 </body>
 </html>
