--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <p>Web Developer Portfolio</p>
         <img src="https://media-exp1.licdn.com/dms/image/C4E03AQHSbCx8kBs4aw/profile-displayphoto-shrink_200_200/0?e=1586995200&v=beta&t=K_QGiZAziVDvjMSuHigsXgueB7wfHFIMNLU7nbLKAAk" class="circle responsive-img" style="display:block;width:50%;margin:auto;">
         <img src="" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
-        <a href = "../Resume 2020.pdf">
+        <a href = "../Cate-Dunn-Resume.pdf">
         <button class="w3-button w3-light-grey w3-padding-large w3-margin-top">
           <i class="fa fa-download"></i> Download Resume
         </button>
@@ -78,6 +78,14 @@
           <p class="w3-wide">CSS</p>
           <div class="w3-light-grey">
             <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:80%">80%</div>
+          </div>
+          <p class="w3-wide">Javascript</p>
+          <div class="w3-light-grey">
+            <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:85%">85%</div>
+          </div>
+          <p class="w3-wide">HTML</p>
+          <div class="w3-light-grey">
+            <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:85%">85%</div>
           </div><br>
       
         <!-- End About Section -->
@@ -92,12 +100,12 @@
         <div class="w3-row-padding" style="margin:0 -16px">
           <div class="w3-half">
             <!-- Wine and Dine App -->
-            Dine In/Dine Out App
+            <a href = "https://github.com/jvernot/wineAndDine">Dine In/Dine Out App</a>
             <a href= "../wineAndDine/index.html">
               <img class = "hoverable" src="./Assets/css/DineIn-DineOut.png" style="width:100%">
             </a>
             <!-- Password Generator App -->
-            Password Generator
+            <a href="https://github.com/CateDunn/PasswordGenerator">Password Generator</a>
             <a href = "../PasswordGenerator/index.html">
               <img class = "hoverable" src="./Assets/css/passwordGenerator.png" style="width:100%">
             </a>
@@ -117,12 +125,12 @@
     
           <div class="w3-half">
             <!-- Weather Dashboard App -->
-            Weather Dashboard
+            <a href="https://github.com/CateDunn/WeatherDashboard">Weather Dashboard</a>
             <a href="../WeatherDashboard/index.html">
               <img class = "hoverable" src="./Assets/css/WeatherDashboard.png" style="width:100%">
             </a>
             <!-- Day Calendar App -->
-            Day Calendar
+            <a href="https://github.com/CateDunn/DayCalendar">Day Calendar</a>
             <a href="../DayCalendar/index.html">
             <img class = "hoverable" src="./Assets/css/dayCalendar.png" 
             style="width:100%">
