--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
           <h3 class="w3-padding-16">My Skills</h3>
           <p class="w3-wide">HTML</p>
           <div class="w3-light-grey">
-            <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:85%">85%</div>
+            <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:70%">70%</div>
           </div>
           <p class="w3-wide">CSS</p>
           <div class="w3-light-grey">
-            <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:80%">80%</div>
+            <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:70%">70%</div>
           </div>
           <p class="w3-wide">Javascript</p>
           <div class="w3-light-grey">
-            <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:85%">85%</div>
+            <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:40%">40%</div>
           </div>
-          <p class="w3-wide">HTML</p>
+          <p class="w3-wide">Node</p>
           <div class="w3-light-grey">
-            <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:85%">85%</div>
+            <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:10%">10%</div>
           </div><br>
       
         <!-- End About Section -->
