fixing profile picture and adding alt tag

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <header class="w3-container w3-center" style="padding:128px 16px" id="home">
         <h1 class="w3-jumbo"><b>Cate Dunn</b></h1>
         <p>Web Developer Portfolio</p>
-        <img src="https://media-exp1.licdn.com/dms/image/C4E03AQHSbCx8kBs4aw/profile-displayphoto-shrink_200_200/0?e=1586995200&v=beta&t=K_QGiZAziVDvjMSuHigsXgueB7wfHFIMNLU7nbLKAAk" class="circle responsive-img" style="display:block;width:50%;margin:auto;">
+        <img src="https://media-exp1.licdn.com/dms/image/C4E03AQHSbCx8kBs4aw/profile-displayphoto-shrink_200_200/0?e=1592438400&v=beta&t=xKzXJlTiNcCL7W54sy6ACj-4uKkzzO43tfPrhgXfsQA" alt = "Profile" class="circle responsive-img" style="display:block;width:50%;margin:auto;">
         <img src="" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
         <a href = "../Cate-Dunn-Resume.pdf">
         <button class="w3-button w3-light-grey w3-padding-large w3-margin-top">
