fixing dine in/dine out pic

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <!-- Wine and Dine App -->
             <a href = "https://github.com/jvernot/wineAndDine">Dine In/Dine Out App</a>
             <a href= "../wineAndDine/index.html">
-              <img class = "hoverable" src="./Assets/css/DineIn-DineOut.png" style="width:100%">
+              <img class = "hoverable" src="./Assets/css/wineAndDine.png" style="width:100%">
             </a>
             <!-- Password Generator App -->
             <a href="https://github.com/CateDunn/PasswordGenerator">Password Generator</a>
