adding book club project to portfolio

--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
     
           <div class="w3-half">
             <!-- Weather Dashboard App -->
+            <a href="https://github.com/CateDunn/BookClub">Book Club App</a>
+            <a href="https://book-club-application.herokuapp.com/">
+              <img class = "hoverable" src="./Assets/css/bookClub.png" style="width:100%">
+            </a>
             <a href="https://github.com/CateDunn/WeatherDashboard">Weather Dashboard</a>
             <a href="../WeatherDashboard/index.html">
               <img class = "hoverable" src="./Assets/css/WeatherDashboard.png" style="width:100%">
