adding employee template engine

--- a/index.html
+++ b/index.html
@@ -105,9 +105,8 @@
               <img class = "hoverable" src="./Assets/css/wineAndDine.png" style="width:100%">
             </a>
             <!-- Password Generator App -->
-            <a href="https://github.com/CateDunn/PasswordGenerator">Password Generator</a>
-            <a href = "../PasswordGenerator/index.html">
-              <img class = "hoverable" src="./Assets/css/passwordGenerator.png" style="width:100%">
+            <a href="https://github.com/CateDunn/TemplateEngine-EmployeeSummary">Employee Template Engine</a>
+              <img class = "hoverable" src="./Assets/css/team.png" style="width:100%">
             </a>
             <!-- Trivia Game -->
             Trivia Game
