adding note Taker app

--- a/index.html
+++ b/index.html
@@ -104,15 +104,15 @@
             <a href= "../wineAndDine/index.html">
               <img class = "hoverable" src="./Assets/css/wineAndDine.png" style="width:100%">
             </a>
-            <!-- Password Generator App -->
+            <!-- Employee Template Engine -->
             <a href="https://github.com/CateDunn/TemplateEngine-EmployeeSummary">Employee Template Engine</a>
               <img class = "hoverable" src="./Assets/css/team.png" style="width:100%">
+            <!-- Note Taker App -->
+            <a href = "https://github.com/CateDunn/Note-Taker">Note Taker</a>
+            <a href= "https://frozen-escarpment-33568.herokuapp.com/">
+              <img class = "hoverable" src="./Assets/css/noteTaker.png" style="width:100%">
             </a>
-            <!-- Trivia Game -->
-            Trivia Game
-            <a href = "">
-              <img class = "hoverable" src="https://us.123rf.com/450wm/roxanabalint/roxanabalint1806/roxanabalint180600012/103098458-stock-vector-trivia-speech-bubble-on-white-background-vector-illustration.jpg?ver=6"style="width:100%">
-            </a>
+            
             <!-- Info Widget -->
             Info Widget
             <a href = "">
