adding read me generator

--- a/index.html
+++ b/index.html
@@ -131,13 +131,9 @@
             <a href="https://github.com/CateDunn/WeatherDashboard">Weather Dashboard</a>
             <a href="../WeatherDashboard/index.html">
               <img class = "hoverable" src="./Assets/css/WeatherDashboard.png" style="width:100%">
-            </a>
-            <!-- Day Calendar App -->
-            <a href="https://github.com/CateDunn/DayCalendar">Day Calendar</a>
-            <a href="../DayCalendar/index.html">
-            <img class = "hoverable" src="./Assets/css/dayCalendar.png" 
-            style="width:100%">
-            </a>
+            <!-- Read Me Generator -->
+            <a href="https://github.com/CateDunn/ReadMeGenerator">Read Me Generator</a>
+            <img class = "hoverable" src="./Assets/css/readMeGenerator.png" style="width:100%">
             <!-- Rock, Paper, Scissors Game -->
             Rock, Paper, Scissors Game
             <a href = "">
